; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/core/extr_multicast.c_mcast_init.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/core/extr_multicast.c_mcast_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [9 x i8] c"ib_mcast\00", align 1
@mcast_wq = common dso_local global i32 0, align 4
@ENOMEM = common dso_local global i32 0, align 4
@sa_client = common dso_local global i32 0, align 4
@mcast_client = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mcast_init() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = call i32 @create_singlethread_workqueue(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0))
  store i32 %3, i32* @mcast_wq, align 4
  %4 = load i32, i32* @mcast_wq, align 4
  %5 = icmp ne i32 %4, 0
  br i1 %5, label %9, label %6

6:                                                ; preds = %0
  %7 = load i32, i32* @ENOMEM, align 4
  %8 = sub nsw i32 0, %7
  store i32 %8, i32* %1, align 4
  br label %21

9:                                                ; preds = %0
  %10 = call i32 @ib_sa_register_client(i32* @sa_client)
  %11 = call i32 @ib_register_client(i32* @mcast_client)
  store i32 %11, i32* %2, align 4
  %12 = load i32, i32* %2, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %15

14:                                               ; preds = %9
  br label %16

15:                                               ; preds = %9
  store i32 0, i32* %1, align 4
  br label %21

16:                                               ; preds = %14
  %17 = call i32 @ib_sa_unregister_client(i32* @sa_client)
  %18 = load i32, i32* @mcast_wq, align 4
  %19 = call i32 @destroy_workqueue(i32 %18)
  %20 = load i32, i32* %2, align 4
  store i32 %20, i32* %1, align 4
  br label %21

21:                                               ; preds = %16, %15, %6
  %22 = load i32, i32* %1, align 4
  ret i32 %22
}

declare dso_local i32 @create_singlethread_workqueue(i8*) #1

declare dso_local i32 @ib_sa_register_client(i32*) #1

declare dso_local i32 @ib_register_client(i32*) #1

declare dso_local i32 @ib_sa_unregister_client(i32*) #1

declare dso_local i32 @destroy_workqueue(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
